// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Custom Class 1`] = `
<button
  className="btn-prm-md-reg btn-dis"
>
  fake disabled
</button>
`;

exports[`Storyshots Components/Button Default 1`] = `
<button
  className="btn-prm-md-reg "
/>
`;

exports[`Storyshots Components/Button Disabled 1`] = `
<button
  className="btn-prm-dis-md-reg "
>
  disabled
</button>
`;

exports[`Storyshots Components/Button Large 1`] = `
<button
  className="btn-prm-lg-reg "
>
  Large Button !!!
</button>
`;

exports[`Storyshots Components/Button Medium 1`] = `
<button
  className="btn-prm-md-reg "
>
  Medium Btn
</button>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<button
  className="btn-prm-md-reg "
>
  Primary
</button>
`;

exports[`Storyshots Components/Button Secondary 1`] = `
<button
  className="btn-sec-md-reg "
>
  Secondary
</button>
`;

exports[`Storyshots Components/Button Small 1`] = `
<button
  className="btn-prm-sm-reg "
>
  Small
</button>
`;

exports[`Storyshots Components/Button Square 1`] = `
<button
  className="btn-prm-sq-reg "
>
  OK
</button>
`;

exports[`Storyshots Components/Button Thin 1`] = `
<button
  className="btn-prm-md-thn "
/>
`;

exports[`Storyshots Components/Card Default 1`] = `
<div
  className="card card-md"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <svg
    className="card-cover"
    fill="black"
    preserveAspectRatio="xMinYMin slice"
    stroke="black"
  >
    placeholder.svg
  </svg>
  <div
    className="card-divider"
  />
  <div
    className="card-container"
  >
    <h3
      className="card-title"
    >
      Title
    </h3>
    <div
      className="card-content-text"
    >
      Labore odio voluptas voluptas vel qui vel. Aut est quo. Eveniet non tempore incidunt eum vero. Quia tempore error neque nam et numquam quidem. Amet voluptas delectus quisquam architecto numquam quia et impedit eos. Excepturi aliquid eum.
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Card With Cover 1`] = `
<div
  className="card card-md"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <img
    alt="card img"
    className="card-cover"
    src="/regular-cover.png"
  />
  <div
    className="card-divider"
  />
  <div
    className="card-container"
  >
    <h3
      className="card-title"
    >
      Title
    </h3>
    <div
      className="card-content-text"
    >
      Labore odio voluptas voluptas vel qui vel. Aut est quo. Eveniet non tempore incidunt eum vero. Quia tempore error neque nam et numquam quidem. Amet voluptas delectus quisquam architecto numquam quia et impedit eos. Excepturi aliquid eum.
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Card With Custom Children 1`] = `
<div
  className="card card-md"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <svg
    className="card-cover"
    fill="black"
    preserveAspectRatio="xMinYMin slice"
    stroke="black"
  >
    placeholder.svg
  </svg>
  <div
    className="card-divider"
  />
  <div
    className="card-container"
  >
    <div
      style={
        Object {
          "backgroundColor": "blue",
          "borderRadius": "10px",
          "color": "white",
          "textAlign": "center",
        }
      }
    >
      Custom stuff
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Card With Custom Content 1`] = `
<div
  className="card card-md"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <svg
    className="card-cover"
    fill="black"
    preserveAspectRatio="xMinYMin slice"
    stroke="black"
  >
    placeholder.svg
  </svg>
  <div
    className="card-divider"
  />
  <div
    className="card-container-no-text"
  >
    <h3
      className="card-title"
    >
      Title
    </h3>
    <div
      style={
        Object {
          "backgroundColor": "blue",
          "borderRadius": "10px",
          "color": "white",
          "textAlign": "center",
        }
      }
    >
      Custom content
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Card With Horizontal Cover 1`] = `
<div
  className="card card-md"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <img
    alt="card img"
    className="card-cover"
    src="/horizontal-cover.png"
  />
  <div
    className="card-divider"
  />
  <div
    className="card-container"
  >
    <h3
      className="card-title"
    >
      Title
    </h3>
    <div
      className="card-content-text"
    >
      Labore odio voluptas voluptas vel qui vel. Aut est quo. Eveniet non tempore incidunt eum vero. Quia tempore error neque nam et numquam quidem. Amet voluptas delectus quisquam architecto numquam quia et impedit eos. Excepturi aliquid eum.
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Card With Long Title 1`] = `
<div
  className="card card-md"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <svg
    className="card-cover"
    fill="black"
    preserveAspectRatio="xMinYMin slice"
    stroke="black"
  >
    placeholder.svg
  </svg>
  <div
    className="card-divider"
  />
  <div
    className="card-container"
  >
    <h3
      className="card-title"
    >
      Hello this is long title
    </h3>
    <div
      className="card-content-text"
    >
      Labore odio voluptas voluptas vel qui vel. Aut est quo. Eveniet non tempore incidunt eum vero. Quia tempore error neque nam et numquam quidem. Amet voluptas delectus quisquam architecto numquam quia et impedit eos. Excepturi aliquid eum.
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Card With Vertical Cover 1`] = `
<div
  className="card card-md"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <img
    alt="card img"
    className="card-cover"
    src="/vertical-cover.png"
  />
  <div
    className="card-divider"
  />
  <div
    className="card-container"
  >
    <h3
      className="card-title"
    >
      Title
    </h3>
    <div
      className="card-content-text"
    >
      Labore odio voluptas voluptas vel qui vel. Aut est quo. Eveniet non tempore incidunt eum vero. Quia tempore error neque nam et numquam quidem. Amet voluptas delectus quisquam architecto numquam quia et impedit eos. Excepturi aliquid eum.
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/EditableCard Default 1`] = `
<div
  className="card card-md card-noimage editable-card"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    className="card-container-no-text"
  >
    <textarea
      className="tinput-md"
      onChange={[Function]}
      placeholder=""
      rows={14}
      value=""
    >
      
    </textarea>
  </div>
</div>
`;

exports[`Storyshots Components/EditableCard Large 1`] = `
<div
  className="card card-lg card-noimage editable-card"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    className="card-container-no-text"
  >
    <textarea
      className="tinput-md"
      onChange={[Function]}
      placeholder=""
      rows={26}
      value=""
    >
      
    </textarea>
  </div>
</div>
`;

exports[`Storyshots Components/EditableCard Large With Title 1`] = `
<div
  className="card card-lg card-noimage editable-card"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    className="card-container-no-text"
  >
    <input
      className="tinput-md title"
      onChange={[Function]}
      value=""
    />
    <textarea
      className="tinput-md"
      onChange={[Function]}
      placeholder=""
      rows={24}
      value=""
    >
      
    </textarea>
  </div>
</div>
`;

exports[`Storyshots Components/EditableCard Medium 1`] = `
<div
  className="card card-md card-noimage editable-card"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    className="card-container-no-text"
  >
    <textarea
      className="tinput-md"
      onChange={[Function]}
      placeholder=""
      rows={14}
      value=""
    >
      
    </textarea>
  </div>
</div>
`;

exports[`Storyshots Components/EditableCard Small 1`] = `
<div
  className="card card-sm card-noimage editable-card"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    className="card-container-no-text"
  >
    <textarea
      className="tinput-md"
      onChange={[Function]}
      placeholder=""
      rows={3}
      value=""
    >
      
    </textarea>
  </div>
</div>
`;

exports[`Storyshots Components/EditableCard Small With A Button 1`] = `
<div
  className="card card-sm card-noimage editable-card"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    className="card-container-no-text"
  >
    <textarea
      className="tinput-md"
      onChange={[Function]}
      placeholder=""
      rows={1}
      value=""
    >
      
    </textarea>
    <div
      className="btn-container"
    >
      <button
        className="btn-prm-md-thn "
        onClick={[Function]}
      >
        click me
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/EditableCard Small With Title 1`] = `
<div
  className="card card-sm card-noimage editable-card"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    className="card-container-no-text"
  >
    <textarea
      className="tinput-md"
      onChange={[Function]}
      placeholder=""
      rows={3}
      value=""
    >
      
    </textarea>
  </div>
</div>
`;

exports[`Storyshots Components/EditableCard With A Button 1`] = `
<div
  className="card card-md card-noimage editable-card"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    className="card-container-no-text"
  >
    <textarea
      className="tinput-md"
      onChange={[Function]}
      placeholder=""
      rows={12}
      value=""
    >
      
    </textarea>
    <div
      className="btn-container"
    >
      <button
        className="btn-prm-md-thn "
        onClick={[Function]}
      >
        click me
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/EditableCard With Title 1`] = `
<div
  className="card card-md card-noimage editable-card"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    className="card-container-no-text"
  >
    <input
      className="tinput-md title"
      onChange={[Function]}
      value=""
    />
    <textarea
      className="tinput-md"
      onChange={[Function]}
      placeholder=""
      rows={12}
      value=""
    >
      
    </textarea>
  </div>
</div>
`;

exports[`Storyshots Components/EditableCard With Two Buttons 1`] = `
<div
  className="card card-md card-noimage editable-card"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    className="card-container-no-text"
  >
    <textarea
      className="tinput-md"
      onChange={[Function]}
      placeholder=""
      rows={12}
      value=""
    >
      
    </textarea>
    <div
      className="btn-container"
    >
      <button
        className="btn-sec-sm-thn "
        onClick={[Function]}
      >
        cancel
      </button>
      <button
        className="btn-prm-sm-thn "
        onClick={[Function]}
      >
        ok
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/GhostCard Default 1`] = `
<div
  className="card card-md ghost-card"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <svg
    className="card-cover"
    fill="black"
    preserveAspectRatio="xMinYMin slice"
    stroke="black"
  >
    placeholder.svg
  </svg>
  <div
    className="card-divider"
  />
  <div
    className="card-container-no-text"
  >
    <div
      className="ghost-card-text-container"
    >
      <b
        className="ghost-card-text"
      >
        Add a new asdf...
      </b>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/GhostCard Large 1`] = `
<div
  className="card card-lg ghost-card"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <svg
    className="card-cover"
    fill="black"
    preserveAspectRatio="xMinYMin slice"
    stroke="black"
  >
    placeholder.svg
  </svg>
  <div
    className="card-divider"
  />
  <div
    className="card-container-no-text"
  >
    <div
      className="ghost-card-text-container"
    >
      <b
        className="ghost-card-text"
      >
        Add a new asdf...
      </b>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/GhostCard No Image 1`] = `
<div
  className="card card-md ghost-card"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <svg
    className="card-cover"
    fill="black"
    preserveAspectRatio="xMinYMin slice"
    stroke="black"
  >
    placeholder.svg
  </svg>
  <div
    className="card-divider"
  />
  <div
    className="card-container-no-text"
  >
    <div
      className="ghost-card-text-container"
    >
      <b
        className="ghost-card-text"
      >
        Add a new asdf...
      </b>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/GhostCard Small 1`] = `
<div
  className="card card-sm card-noimage ghost-card"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    className="card-container-no-text"
  >
    <div
      className="ghost-card-text-container"
    >
      <b
        className="ghost-card-text"
      >
        Add a new asdf...
      </b>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NoteCard Default 1`] = `
<div
  data-rbd-droppable-context-id="0"
  data-rbd-droppable-id="1"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    aria-describedby="rbd-hidden-text-0-hidden-text-0"
    className="card card-sm card-noimage note"
    data-rbd-drag-handle-context-id="0"
    data-rbd-drag-handle-draggable-id="1"
    data-rbd-draggable-context-id="0"
    data-rbd-draggable-id="1"
    draggable={false}
    onDragStart={[Function]}
    onTransitionEnd={null}
    role="button"
    style={
      Object {
        "transform": null,
        "transition": null,
      }
    }
    tabIndex={0}
  >
    <div
      className="card-container-no-text"
    >
      <h3
        className="card-title"
      >
        Buy Groceries
      </h3>
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 1,
          }
        }
      >
        <div
          className="note-card-description card-content-text"
        >
          eggs, chicken, tomatoes, green onion
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NoteCard Due In 3 Days 1`] = `
<div
  data-rbd-droppable-context-id="1"
  data-rbd-droppable-id="1"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    aria-describedby="rbd-hidden-text-1-hidden-text-3"
    className="card card-sm card-noimage note"
    data-rbd-drag-handle-context-id="1"
    data-rbd-drag-handle-draggable-id="1"
    data-rbd-draggable-context-id="1"
    data-rbd-draggable-id="1"
    draggable={false}
    onDragStart={[Function]}
    onTransitionEnd={null}
    role="button"
    style={
      Object {
        "transform": null,
        "transition": null,
      }
    }
    tabIndex={0}
  >
    <div
      className="card-container-no-text"
    >
      <h3
        className="card-title"
      >
        Name
      </h3>
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 1,
          }
        }
      >
        <div
          className="note-card-description card-content-text"
        >
          Description
        </div>
        <div
          className="due"
        >
          due in
           
          <span
            className="due-soon"
          >
            3 days
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NoteCard Due In 5 Days 1`] = `
<div
  data-rbd-droppable-context-id="2"
  data-rbd-droppable-id="1"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    aria-describedby="rbd-hidden-text-2-hidden-text-6"
    className="card card-sm card-noimage note"
    data-rbd-drag-handle-context-id="2"
    data-rbd-drag-handle-draggable-id="1"
    data-rbd-draggable-context-id="2"
    data-rbd-draggable-id="1"
    draggable={false}
    onDragStart={[Function]}
    onTransitionEnd={null}
    role="button"
    style={
      Object {
        "transform": null,
        "transition": null,
      }
    }
    tabIndex={0}
  >
    <div
      className="card-container-no-text"
    >
      <h3
        className="card-title"
      >
        Name
      </h3>
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 1,
          }
        }
      >
        <div
          className="note-card-description card-content-text"
        >
          Description
        </div>
        <div
          className="due"
        >
          due in
           
          <span
            className="due-far"
          >
            5 days
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NoteCard Due Today 1`] = `
<div
  data-rbd-droppable-context-id="3"
  data-rbd-droppable-id="1"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    aria-describedby="rbd-hidden-text-3-hidden-text-9"
    className="card card-sm card-noimage note"
    data-rbd-drag-handle-context-id="3"
    data-rbd-drag-handle-draggable-id="1"
    data-rbd-draggable-context-id="3"
    data-rbd-draggable-id="1"
    draggable={false}
    onDragStart={[Function]}
    onTransitionEnd={null}
    role="button"
    style={
      Object {
        "transform": null,
        "transition": null,
      }
    }
    tabIndex={0}
  >
    <div
      className="card-container-no-text"
    >
      <h3
        className="card-title"
      >
        Name
      </h3>
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 1,
          }
        }
      >
        <div
          className="note-card-description card-content-text"
        >
          Description
        </div>
        <div
          className="due"
        >
          due
           
          <span
            className="due-very-soon"
          >
            today
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NoteCard Due Tomorrow 1`] = `
<div
  data-rbd-droppable-context-id="4"
  data-rbd-droppable-id="1"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    aria-describedby="rbd-hidden-text-4-hidden-text-12"
    className="card card-sm card-noimage note"
    data-rbd-drag-handle-context-id="4"
    data-rbd-drag-handle-draggable-id="1"
    data-rbd-draggable-context-id="4"
    data-rbd-draggable-id="1"
    draggable={false}
    onDragStart={[Function]}
    onTransitionEnd={null}
    role="button"
    style={
      Object {
        "transform": null,
        "transition": null,
      }
    }
    tabIndex={0}
  >
    <div
      className="card-container-no-text"
    >
      <h3
        className="card-title"
      >
        Name
      </h3>
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 1,
          }
        }
      >
        <div
          className="note-card-description card-content-text"
        >
          Description
        </div>
        <div
          className="due"
        >
          due
           
          <span
            className="due-very-soon"
          >
            tomorrow
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NoteCard Long Desctription 1`] = `
<div
  data-rbd-droppable-context-id="5"
  data-rbd-droppable-id="1"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    aria-describedby="rbd-hidden-text-5-hidden-text-15"
    className="card card-sm card-noimage note"
    data-rbd-drag-handle-context-id="5"
    data-rbd-drag-handle-draggable-id="1"
    data-rbd-draggable-context-id="5"
    data-rbd-draggable-id="1"
    draggable={false}
    onDragStart={[Function]}
    onTransitionEnd={null}
    role="button"
    style={
      Object {
        "transform": null,
        "transition": null,
      }
    }
    tabIndex={0}
  >
    <div
      className="card-container-no-text"
    >
      <h3
        className="card-title"
      >
        Name is short
      </h3>
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 1,
          }
        }
      >
        <div
          className="note-card-description card-content-text"
        >
          description is very very very very very very very very very very very very long
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NoteCard Long Name 1`] = `
<div
  data-rbd-droppable-context-id="6"
  data-rbd-droppable-id="1"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    aria-describedby="rbd-hidden-text-6-hidden-text-18"
    className="card card-sm card-noimage note"
    data-rbd-drag-handle-context-id="6"
    data-rbd-drag-handle-draggable-id="1"
    data-rbd-draggable-context-id="6"
    data-rbd-draggable-id="1"
    draggable={false}
    onDragStart={[Function]}
    onTransitionEnd={null}
    role="button"
    style={
      Object {
        "transform": null,
        "transition": null,
      }
    }
    tabIndex={0}
  >
    <div
      className="card-container-no-text"
    >
      <h3
        className="card-title"
      >
        hello my name is asdf nice to meet you
      </h3>
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 1,
          }
        }
      >
        <div
          className="note-card-description card-content-text"
        >
          description
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NoteCard One Day Past Due 1`] = `
<div
  data-rbd-droppable-context-id="7"
  data-rbd-droppable-id="1"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    aria-describedby="rbd-hidden-text-7-hidden-text-21"
    className="card card-sm card-noimage note"
    data-rbd-drag-handle-context-id="7"
    data-rbd-drag-handle-draggable-id="1"
    data-rbd-draggable-context-id="7"
    data-rbd-draggable-id="1"
    draggable={false}
    onDragStart={[Function]}
    onTransitionEnd={null}
    role="button"
    style={
      Object {
        "transform": null,
        "transition": null,
      }
    }
    tabIndex={0}
  >
    <div
      className="card-container-no-text"
    >
      <h3
        className="card-title"
      >
        Name
      </h3>
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 1,
          }
        }
      >
        <div
          className="note-card-description card-content-text"
        >
          Description
        </div>
        <div
          className="due"
        >
          <span
            className="due-past"
          >
            1 day
             past due
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NotesList Default 1`] = `
<div
  className="notes-list"
  data-rbd-droppable-context-id="8"
  data-rbd-droppable-id="60c5d161a6c781e43c11a5a3"
>
  <span
    className="notes-list-name"
  >
    List 1
  </span>
  <div
    aria-describedby="rbd-hidden-text-8-hidden-text-24"
    className="card card-sm card-noimage note"
    data-rbd-drag-handle-context-id="8"
    data-rbd-drag-handle-draggable-id="60c5d167a6c781e43c11a5a4"
    data-rbd-draggable-context-id="8"
    data-rbd-draggable-id="60c5d167a6c781e43c11a5a4"
    draggable={false}
    onDragStart={[Function]}
    onTransitionEnd={null}
    role="button"
    style={
      Object {
        "transform": null,
        "transition": null,
      }
    }
    tabIndex={0}
  >
    <div
      className="card-container-no-text"
    >
      <h3
        className="card-title"
      >
        Note Something
      </h3>
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 1,
          }
        }
      >
        <div
          className="note-card-description card-content-text"
        >
          Buy something
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby="rbd-hidden-text-8-hidden-text-24"
    className="card card-sm card-noimage note"
    data-rbd-drag-handle-context-id="8"
    data-rbd-drag-handle-draggable-id="6106f35927d5f4001d197e65"
    data-rbd-draggable-context-id="8"
    data-rbd-draggable-id="6106f35927d5f4001d197e65"
    draggable={false}
    onDragStart={[Function]}
    onTransitionEnd={null}
    role="button"
    style={
      Object {
        "transform": null,
        "transition": null,
      }
    }
    tabIndex={0}
  >
    <div
      className="card-container-no-text"
    >
      <h3
        className="card-title"
      >
        Delete me
      </h3>
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 1,
          }
        }
      >
        <div
          className="note-card-description card-content-text"
        >
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NotesList Empty 1`] = `
<div
  className="notes-list"
  data-rbd-droppable-context-id="9"
  data-rbd-droppable-id="1"
>
  <span
    className="notes-list-name"
  >
    List aa
  </span>
  <span
    className="notes-list-empty-msg"
  >
    Nothing here yet.
  </span>
</div>
`;

exports[`Storyshots Components/TextInput Bigger Multiline 1`] = `
<div
  style={
    Object {
      "border": "2px black solid",
      "padding": "20px",
      "width": "400px",
    }
  }
>
  <textarea
    className="tinput-md"
    onChange={[Function]}
    rows={6}
    value=""
  >
    
  </textarea>
</div>
`;

exports[`Storyshots Components/TextInput Default 1`] = `
<div
  style={
    Object {
      "border": "2px black solid",
      "padding": "20px",
      "width": "400px",
    }
  }
>
  <input
    className="tinput-md"
    onChange={[Function]}
    value=""
  />
</div>
`;

exports[`Storyshots Components/TextInput In A Tight Container 1`] = `
<div
  style={
    Object {
      "border": "2px black solid",
      "padding": "10px",
      "width": "100px",
    }
  }
>
  <input
    className="tinput-md"
    onChange={[Function]}
    value=""
  />
</div>
`;

exports[`Storyshots Components/TextInput Large Font 1`] = `
<div
  style={
    Object {
      "border": "2px black solid",
      "padding": "20px",
      "width": "400px",
    }
  }
>
  <input
    className="tinput-lg"
    onChange={[Function]}
    value=""
  />
</div>
`;

exports[`Storyshots Components/TextInput Multiline 1`] = `
<div
  style={
    Object {
      "border": "2px black solid",
      "padding": "20px",
      "width": "400px",
    }
  }
>
  <textarea
    className="tinput-md"
    onChange={[Function]}
    value=""
  >
    
  </textarea>
</div>
`;

exports[`Storyshots Components/TextInput Multiline With Placeholder 1`] = `
<div
  style={
    Object {
      "border": "2px black solid",
      "padding": "20px",
      "width": "400px",
    }
  }
>
  <textarea
    className="tinput-md"
    onChange={[Function]}
    placeholder="Type something long here..."
    value=""
  >
    
  </textarea>
</div>
`;

exports[`Storyshots Components/TextInput Single Line With Rows Specified 1`] = `
<div
  style={
    Object {
      "border": "2px black solid",
      "padding": "20px",
      "width": "400px",
    }
  }
>
  <input
    className="tinput-md"
    onChange={[Function]}
    rows={5}
    value=""
  />
</div>
`;

exports[`Storyshots Components/TextInput With Placeholder 1`] = `
<div
  style={
    Object {
      "border": "2px black solid",
      "padding": "20px",
      "width": "400px",
    }
  }
>
  <input
    className="tinput-md"
    onChange={[Function]}
    placeholder="Enter something..."
    value=""
  />
</div>
`;

exports[`Storyshots Components/WarningFab Always Display 1`] = `
<div
  className="warningFab"
  style={
    Object {
      "display": "block",
    }
  }
>
  <img
    alt="warning icon"
    className="icon"
    onClick={[Function]}
    src="warning.svg"
  />
</div>
`;

exports[`Storyshots Components/WarningFab Default 1`] = `
<div
  className="warningFab"
  style={
    Object {
      "display": "none",
    }
  }
>
  <img
    alt="warning icon"
    className="icon"
    onClick={[Function]}
    src="warning.svg"
  />
</div>
`;

exports[`Storyshots Components/WarningFab Display On Message 1`] = `
<div
  className="warningFab"
  style={
    Object {
      "display": "block",
    }
  }
>
  <img
    alt="warning icon"
    className="icon"
    onClick={[Function]}
    src="warning.svg"
  />
</div>
`;

exports[`Storyshots Components/WarningFab Display On Message No Message 1`] = `
<div
  className="warningFab"
  style={
    Object {
      "display": "none",
    }
  }
>
  <img
    alt="warning icon"
    className="icon"
    onClick={[Function]}
    src="warning.svg"
  />
</div>
`;

exports[`Storyshots Components/WarningFab With Custom Action 1`] = `
<div
  className="warningFab"
  style={
    Object {
      "display": "block",
    }
  }
>
  <img
    alt="warning icon"
    className="icon"
    onClick={[Function]}
    src="warning.svg"
  />
</div>
`;
